--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "alsatian": "^2.3.0",
     "nyc": "^13.3.0",
     "tslint": "^5.12.1",
+    "typed-rest-client": "^1.1.2",
     "typescript": "^3.3.3"
   }
 }
