--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "scripts": {
     "tsc": "tsc",
     "alsatian": "alsatian",
-    "clean": "git clean -fxd",
+    "clean": "rm -rf .nyc_output && rm -rf coverage && rm -rf dist && rm -rf tests/js",
     "clean-install": "yarn run clean && yarn install",
     "build": "rm -rf dist && tsc",
     "build-tests": "rm -rf tests/js && tsc -p ./tests",
     "build-all": "yarn run build && yarn run build-tests",
     "tests": "cat tests/banner.txt && nyc --reporter=lcov --reporter=html alsatian --tap ./tests/js/**/*Tests.js",
-    "test": "yarn run clean-install && yarn run build-all && yarn run tests"
+    "test": "yarn run clean && yarn run build-all && yarn run tests"
   },
   "files": [
     "README.md",
@@ -31,9 +31,11 @@
   "dependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/express": "^4.16.1",
+    "@types/temp": "^0.8.33",
     "aws-sdk": "^2.404.0",
     "command-line-args": "^5.0.2",
     "express": "^4.16.4",
+    "temp": "^0.9.0",
     "typescript-lambda-api": "^0.2.3"
   },
   "devDependencies": {
