--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
   "name": "typescript-lambda-api-local",
   "description": "Test typescript AWS Lambda API's locally using express.",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/typescript-lambda-api-local.git"
   },
   "scripts": {
+
     "tsc": "tsc",
-    "clean": "rm -rf node_modules && rm -rf dist",
-    "build": "npm run clean && npm install && tsc"
+    "alsatian": "alsatian",
+    "install-with-audit": "yarn install && yarn audit",
+    "build": "rm -rf dist && tsc",
+    "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
+    "build-all": "yarn run install-with-audit && yarn run build && yarn run build-tests",
+    "tests": "cat ./tests/banner.txt && nyc --reporter=lcov --reporter=html alsatian --tap ./tests/js/**/*Tests.js 2>&1 | tee tests/results.tap",
+    "test": "rm -rf .nyc_output && rm -rf coverage && yarn run build-all && yarn run tests"
   },
+  "main": "dist/typescript-lambda-api-local.js",
+  "typings": "dist/typescript-lambda-api-local.d.ts",
+  "author": "Matthew Snoddy",
+  "license": "MIT",
   "files": [
     "README.md",
     "LICENSE",
-    "index.d.ts",
     "dist/**/*.js",
     "dist/**/*.d.ts"
   ],
-  "main": "index.js",
-  "typings": "index.d.ts",
-  "author": "Matthew Snoddy",
-  "license": "MIT",
+  "nyc": {
+    "lines": 70,
+    "exclude": [
+      "tests/**/*"
+    ]
+  },
   "dependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/express": "^4.16.1",
     "aws-sdk": "^2.404.0",
     "command-line-args": "^5.0.2",
     "express": "^4.16.4",
-    "typescript-lambda-api": "^0.2.3"
+    "typescript-lambda-api": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^11.9.4",
-    "tslint": "^5.12.1",
+    "@types/temp": "^0.8.33",
+    "alsatian": "^2.3.0",
+    "nyc": "^13.3.0",
+    "temp": "^0.9.0",
+    "typed-rest-client": "^1.1.2",
     "typescript": "^3.3.3"
   }
 }
