--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "url": "https://github.com/djfdyuruiry/typescript-lambda-api-local.git"
   },
   "scripts": {
-    "tsc": "tsc",
-    "alsatian": "alsatian",
-    "install-with-audit": "yarn install && yarn audit",
-    "build": "rm -rf dist && tsc",
-    "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
+    "build": "yarn run lint && rm -rf dist && tsc",
     "build-all": "yarn run install-with-audit && yarn run build && yarn run build-tests",
-    "tests": "cat ./tests/banner.txt && nyc --reporter=lcov --reporter=html alsatian --tap ./tests/js/**/*Tests.js 2>&1 | tee tests/results.tap",
-    "test": "rm -rf .nyc_output && rm -rf coverage && yarn run build-all && yarn run tests"
+    "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
+    "clean-install": "rm -rf node_modules && yarn install",
+    "install-with-audit": "yarn install && yarn audit",
+    "lint": "tslint 'src/**/*.ts'",
+    "test": "yarn run build-all && scripts/runTests.sh"
   },
   "main": "dist/typescript-lambda-api-local.js",
   "typings": "dist/typescript-lambda-api-local.d.ts",
@@ -50,8 +49,11 @@
     "@types/temp": "^0.8.33",
     "alsatian": "^2.3.0",
     "nyc": "^13.3.0",
+    "tap-junit": "^3.0.2",
     "temp": "^0.9.0",
+    "tslint": "^5.13.0",
     "typed-rest-client": "^1.1.2",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "xunit-viewer": "^5.1.8"
   }
 }
