--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "aws-sdk": "^2.404.0",
     "command-line-args": "^5.0.2",
     "express": "^4.16.4",
+    "swagger-ui-express": "^4.0.2",
     "typescript-lambda-api": "^0.3.1"
   },
   "devDependencies": {
