--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean-install": "rm -rf node_modules && yarn install",
     "install-with-audit": "yarn install && yarn audit",
     "lint": "tslint 'src/**/*.ts'",
-    "test": "yarn run build-all && scripts/runTests.sh"
+    "test": "yarn run build-all && scripts/runTests.sh",
+    "test-app": "yarn build-all && node ./tests/js/test-components/TestApp.js"
   },
   "main": "dist/typescript-lambda-api-local.js",
   "typings": "dist/typescript-lambda-api-local.d.ts",
@@ -37,16 +38,19 @@
     ]
   },
   "dependencies": {
-    "@types/command-line-args": "^5.0.0",
-    "@types/express": "^4.16.1",
     "aws-sdk": "^2.404.0",
     "command-line-args": "^5.0.2",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "swagger-ui-express": "^4.0.2",
-    "typescript-lambda-api": "^0.3.1"
+    "typescript-lambda-api": "^0.3.2"
   },
   "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.1",
     "@types/node": "^11.9.4",
+    "@types/swagger-ui-express": "^3.0.0",
     "@types/temp": "^0.8.33",
     "alsatian": "^2.3.0",
     "nyc": "^13.3.0",
