--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ts-lambda-api": "^0.4.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/command-line-args": "^5.0.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
