--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
@@ -25,8 +25,7 @@
   "files": [
     "README.md",
     "LICENSE",
-    "dist/**/*.js",
-    "dist/**/*.d.ts"
+    "dist/**/*"
   ],
   "nyc": {
     "check-coverage": true,
