--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
   },
   "scripts": {
-    "build": "yarn run lint && rm -rf dist && tsc && yarn docs",
-    "build-all": "yarn run install-with-audit && yarn run build && yarn run build-tests",
+    "build": "yarn lint && rm -rf dist && tsc && yarn docs",
+    "build-all": "yarn clean-install && yarn build && yarn build-tests",
     "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
+    "clean-install": "rm -rf node_modules && yarn install && yarn improved-audit",
     "docs": "rm -rf ./docs && typedoc --mode file --excludePrivate --sourcefile-url-prefix https://github.com/djfdyuruiry/ts-lambda-api-local/blob/master/src/ --out ./docs",
-    "clean-install": "rm -rf node_modules && yarn install-with-audit",
-    "install-with-audit": "yarn install --audit && yarn audit",
+    "improved-audit": "improved-yarn-audit -e $(cat .audit-exceptions)",
     "lint": "tslint 'src/**/*.ts'",
-    "shell": "bash",
-    "test": "yarn run build-all && scripts/runTests.sh",
+    "shell": "$SHELL",
+    "test": "yarn build-all && scripts/runTests.sh",
     "test-app": "yarn build-all && node ./tests/js/test-components/TestApp.js"
   },
   "main": "dist/ts-lambda-api-local.js",
@@ -39,12 +39,12 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.404.0",
+    "aws-sdk": "^2.458.0",
     "command-line-args": "^5.0.2",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "swagger-ui-express": "^4.0.2",
-    "ts-lambda-api": "^0.5.0"
+    "express": "^4.17.0",
+    "swagger-ui-express": "^4.0.4",
+    "ts-lambda-api": "^0.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -52,10 +52,11 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/md5-file": "^4.0.0",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.2",
     "@types/swagger-ui-express": "^3.0.0",
     "@types/temp": "^0.8.33",
     "alsatian": "^2.3.0",
+    "improved-yarn-audit": "^1.0.1",
     "junit-bark": "^1.1.1",
     "marked": "^0.6.2",
     "md5-file": "^4.0.0",
