--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
   },
   "scripts": {
     "build": "yarn lint && rm -rf dist && tsc && yarn docs",
-    "build-all": "yarn clean-install && yarn build && yarn build-tests",
+    "build-all": "yarn install && yarn build && yarn build-tests",
     "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
     "clean-install": "rm -rf node_modules && yarn install && yarn improved-audit",
     "docs": "./scripts/generateDocs.sh",
@@ -39,20 +39,20 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.458.0",
+    "aws-sdk": "^2.471.0",
     "command-line-args": "^5.0.2",
     "cors": "^2.8.5",
-    "express": "^4.17.0",
-    "swagger-ui-express": "^4.0.4",
-    "ts-lambda-api": "^0.6.1"
+    "express": "^4.17.1",
+    "swagger-ui-express": "^4.0.6",
+    "ts-lambda-api": "^0.6.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/command-line-args": "^5.0.0",
     "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.1",
+    "@types/express": "^4.17.0",
     "@types/md5-file": "^4.0.0",
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.7",
     "@types/swagger-ui-express": "^3.0.0",
     "@types/temp": "^0.8.33",
     "alsatian": "^2.3.0",
@@ -60,13 +60,13 @@
     "junit-bark": "^1.1.1",
     "marked": "^0.6.2",
     "md5-file": "^4.0.0",
-    "nyc": "^13.3.0",
+    "nyc": "^14.1.1",
     "tap-spec": "^5.0.0",
     "temp": "^0.9.0",
-    "tslint": "^5.13.0",
-    "typed-rest-client": "^1.1.2",
+    "tslint": "^5.17.0",
+    "typed-rest-client": "^1.5.0",
     "typedoc": "^0.14.2",
     "typedoc-plugin-sourcefile-url": "^1.0.4",
-    "typescript": "^3.3.3"
+    "typescript": "^3.5.1"
   }
 }
