--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "2.2.3",
+  "version": "2.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
@@ -10,13 +10,13 @@
     "build": "yarn lint && rm -rf dist && tsc && yarn docs",
     "build-all": "yarn install && yarn build && yarn build-tests",
     "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
-    "clean-install": "rm -rf node_modules && yarn install && yarn improved-audit",
+    "clean-install": "rm -rf node_modules && yarn install",
     "docs": "./scripts/generateDocs.sh",
-    "improved-audit": "improved-yarn-audit -e $(cat .audit-exceptions)",
     "lint": "tslint 'src/**/*.ts'",
     "shell": "$SHELL",
-    "test": "yarn build-all && ./scripts/runTests.sh",
-    "test-app": "yarn build-all && node ./tests/js/test-components/TestApp.js"
+    "improved-audit": "improved-yarn-audit -e $(cat .audit-exceptions)",
+    "test": "yarn build-all && yarn improved-audit && ./scripts/runTests.sh",
+    "test-app": "yarn build-all && yarn improved-audit && node ./tests/js/test-components/TestApp.js"
   },
   "main": "dist/ts-lambda-api-local.js",
   "typings": "dist/ts-lambda-api-local.d.ts",
@@ -39,33 +39,33 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.868.0",
+    "aws-sdk": "^2.927.0",
     "command-line-args": "^5.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "swagger-ui-express": "^4.1.6",
-    "ts-lambda-api": "^2.2.3"
+    "ts-lambda-api": "^2.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/command-line-args": "^5.0.0",
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/md5-file": "^4.0.2",
-    "@types/node": "^14.14.35",
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.2",
     "@types/swagger-ui-express": "^4.1.2",
-    "@types/temp": "^0.8.33",
+    "@types/temp": "^0.9.0",
     "alsatian": "^3.2.1",
-    "improved-yarn-audit": "^2.3.2",
+    "fs-extra": "^10.0.0",
+    "improved-yarn-audit": "^2.3.3",
     "junit-bark": "^1.3.1",
     "md5-file": "^5.0.0",
     "nyc": "^15.1.0",
     "tap-spec": "^5.0.0",
     "temp": "^0.9.4",
     "tslint": "^6.1.3",
-    "typed-rest-client": "^1.8.3",
-    "typedoc": "^0.20.32",
+    "typed-rest-client": "^1.8.4",
+    "typedoc": "^0.21.0-beta.2",
     "typedoc-plugin-sourcefile-link": "^1.0.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   }
 }
