--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
@@ -14,7 +14,7 @@
     "docs": "./scripts/generateDocs.sh",
     "lint": "tslint 'src/**/*.ts'",
     "shell": "$SHELL",
-    "improved-audit": "improved-yarn-audit -e $(cat .audit-exceptions)",
+    "improved-audit": "improved-yarn-audit --fail-on-missing-exclusions ",
     "test": "yarn build-all && yarn improved-audit && ./scripts/runTests.sh",
     "test-app": "yarn build-all && yarn improved-audit && node ./tests/js/test-components/TestApp.js"
   },
@@ -39,33 +39,35 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.927.0",
-    "command-line-args": "^5.0.2",
+    "aws-sdk": "^2.1148.0",
+    "command-line-args": "^5.2.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "swagger-ui-express": "^4.1.6",
-    "ts-lambda-api": "^2.3.0"
+    "express": "^4.18.1",
+    "swagger-ui-express": "^4.4.0",
+    "ts-lambda-api": "^2.3.3"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/command-line-args": "^5.0.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/node": "^15.12.2",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/temp": "^0.9.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/command-line-args": "^5.2.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.39",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/temp": "^0.9.1",
     "alsatian": "^3.2.1",
-    "fs-extra": "^10.0.0",
-    "improved-yarn-audit": "^2.3.3",
+    "fs-extra": "^10.1.0",
+    "improved-yarn-audit": "^3.0.0",
     "junit-bark": "^1.3.1",
     "md5-file": "^5.0.0",
     "nyc": "^15.1.0",
     "tap-spec": "^5.0.0",
     "temp": "^0.9.4",
     "tslint": "^6.1.3",
-    "typed-rest-client": "^1.8.4",
-    "typedoc": "^0.21.0-beta.2",
-    "typedoc-plugin-sourcefile-link": "^1.0.3",
-    "typescript": "^4.3.2"
+    "typed-rest-client": "^1.8.9",
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.3"
+  },
+  "resolutions": {
+    "trim": "^1.0.1"
   }
 }
