--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
@@ -12,7 +12,7 @@
     "build-tests": "rm -rf ./tests/js && tsc -p ./tests",
     "clean-install": "rm -rf node_modules && yarn install",
     "docs": "./scripts/generateDocs.sh",
-    "lint": "tslint 'src/**/*.ts'",
+    "lint": "eslint 'src/**/*.ts'",
     "shell": "$SHELL",
     "improved-audit": "improved-yarn-audit --fail-on-missing-exclusions ",
     "test": "yarn build-all && yarn improved-audit && ./scripts/runTests.sh",
@@ -39,35 +39,43 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.1148.0",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
     "command-line-args": "^5.2.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "swagger-ui-express": "^4.4.0",
-    "ts-lambda-api": "^2.3.3"
+    "express": "^4.18.2",
+    "swagger-ui-express": "^5.0.0",
+    "ts-lambda-api": "^2.4.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/command-line-args": "^5.2.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.39",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/temp": "^0.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "alsatian": "^3.2.1",
-    "fs-extra": "^10.1.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^46.4.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "fs-extra": "^11.1.1",
     "improved-yarn-audit": "^3.0.0",
     "junit-bark": "^1.3.1",
     "md5-file": "^5.0.0",
     "nyc": "^15.1.0",
     "tap-spec": "^5.0.0",
     "temp": "^0.9.4",
-    "tslint": "^6.1.3",
-    "typed-rest-client": "^1.8.9",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.7.3"
+    "typed-rest-client": "^1.8.11",
+    "typedoc": "^0.24.8",
+    "typescript": "^5.1.6"
   },
   "resolutions": {
-    "trim": "^1.0.1"
+    "semver": "^7.5.2",
+    "trim": "^1.0.1",
+    "yaml": "^1.10.2"
   }
 }
