--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "swagger-ui-express": "^5.0.0",
-    "ts-lambda-api": "^2.4.0"
+    "ts-lambda-api": "^2.4.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -75,7 +75,6 @@
   },
   "resolutions": {
     "semver": "^7.5.2",
-    "trim": "^1.0.1",
-    "yaml": "^1.10.2"
+    "trim": "^1.0.1"
   }
 }
