--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lambda-api-local",
   "description": "Test ts-lambda-api API's locally using express.",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/djfdyuruiry/ts-lambda-api-local.git"
@@ -39,39 +39,44 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/s3-request-presigner": "^3.0.0",
-    "command-line-args": "^5.2.1",
+    "@aws-sdk/client-s3": "^3.858.0",
+    "@aws-sdk/s3-request-presigner": "^3.858.0",
+    "command-line-args": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "swagger-ui-express": "^5.0.0",
-    "ts-lambda-api": "^2.4.1"
+    "express": "^5.1.0",
+    "semver": "^7.7.2",
+    "swagger-ui-express": "^5.0.1",
+    "ts-lambda-api": "^2.5.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/command-line-args": "^5.2.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.1",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/temp": "^0.9.1",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
+    "@types/body-parser": "^1.19.6",
+    "@types/command-line-args": "^5.2.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.1.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/temp": "^0.9.4",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "alsatian": "^3.2.1",
-    "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.4.3",
+    "eslint": "^9.32.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsdoc": "^52.0.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "fs-extra": "^11.1.1",
-    "improved-yarn-audit": "^3.0.0",
+    "fs-extra": "^11.3.0",
+    "globals": "^16.3.0",
+    "improved-yarn-audit": "^3.0.3",
     "junit-bark": "^1.3.1",
     "md5-file": "^5.0.0",
-    "nyc": "^15.1.0",
+    "nyc": "^17.1.0",
     "tap-spec": "^5.0.0",
     "temp": "^0.9.4",
-    "typed-rest-client": "^1.8.11",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.1.6"
+    "typed-rest-client": "^2.1.0",
+    "typedoc": "^0.28.8",
+    "typescript": "~5.8.0"
   },
   "resolutions": {
     "semver": "^7.5.2",
